# rustwallet

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  todo
server/: Cargo.toml  env.example
server/migrations/: 20250626100432_init_tables.sql
server/src/: main.rs
server/src/db/: keys.rs  users.rs
server/src/routes/: wallet.rs
wallet_core/: Cargo.toml  env.example
wallet_core/examples/: dealer_demo.rs
wallet_core/src/: lib.rs
wasm/: .gitignore  Cargo.toml
wasm/js/: index.html
wasm/src/: lib.rs
