[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.18"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = "1.17.0"
wallet_core = { path = "../wallet_core" }

[dev-dependencies]
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
