[package]
name = "wallet_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
aws-config = "1.8.0"
aws-sdk-kms = "1.76.0"
aws-smithy-runtime-api = "1.8.1"
dotenv = "0.15.0"
frost-ristretto255 = {version = "2.1.0", features = ["serialization"]}
rand = "0.8.5"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
solana-sdk = "2.3.0"
thiserror = "2.0.12"
tracing = "0.1.41"
zeroize = "1.8.1"

[dev-dependencies]
mockall = "0.13.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
