[package]
name = "wasm-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [ "Window", "Request", "RequestInit", "Response", "Headers", "Crypto", "SubtleCrypto", "CredentialsContainer", "PublicKeyCredentialRequestOptions", "PublicKeyCredentialCreationOptions", "Navigator", "AbortController" ]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
[dependencies.getrandom]
version = "0.2.16"
default-features = false
features = ["js"]

[lib]
crate-type = ["cdylib"]
